# CPP_AIIFY

./: .gitignore  CMakeLists.txt  FileProcessor.cpp  FileProcessor.h  GitignoreParser.cpp  GitignoreParser.h  README.md  aiify_output.txt  main.cpp
.github/workflows/: cmake-multi-platform.yml
